--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -42,4 +42,13 @@ footer
 
 	.link
 		stroke: #000
+		fill: none
 		opacity: 0.1
+
+	.scale
+		stroke: #f99
+
+		text
+			font-family: Helvetica Neue
+			font-size: 10px
+
